[tool.poetry]
name = "px-kvstore"
version = "0.1.0"
description = "Key Value Store Service"
authors = ["Chirag <chiragbhatia8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^24.10.0"
isort = "^5.13.2"
pylint = "^3.3.3"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"